--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "laravel/dusk": "^5.9",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
-        "tymon/jwt-auth": "^1.0"
+        "laravel/ui": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
