laravel jwt to laravel sanctum

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/dusk": "^5.9",
         "laravel/framework": "^7.0",
+        "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0"
     },
